--- a/NHS111.Domain.Dos.Api/appsettings.json
+++ b/NHS111.Domain.Dos.Api/appsettings.json
@@ -5,7 +5,8 @@
     }
   },
   "AllowedHosts": "*",
-  "dos_credential_user": "madeUpUser",
-  "dos_credential_password": "madeUpPassword",
+  "DirectoryOfServices": {
+    "BaseUrl": "https://www.pathwaysdos.nhs.uk/app/api/webservices"
+  },
   "dos_endpoint": "uat"
 }
