--- a/NHS111.Domain.Dos.Api/appsettings.json
+++ b/NHS111.Domain.Dos.Api/appsettings.json
@@ -6,7 +6,9 @@
   },
   "AllowedHosts": "*",
   "DirectoryOfServices": {
-    "BaseUrl": "https://www.pathwaysdos.nhs.uk/app/api/webservices"
+    "BaseUrl": "https://nww.pathwaysdos.nhs.uk/app/api/webservices",
+    "LiveBaseUrl": "https://www.pathwaysdos.nhs.uk/app/api/webservices",
+    "UatBaseUrl": "https://uat.pathwaysdos.nhs.uk/app/api/webservices"
   },
   "dos_endpoint": "uat"
 }
