--- a/NHS111.Domain.Dos.Api/NHS111.Domain.Dos.Api.csproj
+++ b/NHS111.Domain.Dos.Api/NHS111.Domain.Dos.Api.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
 	<AssemblyVersion>0.0.0.*</AssemblyVersion>
     <FileVersion>0.0.0.*</FileVersion>
+	<Deterministic>False</Deterministic>
   </PropertyGroup>
 
   <ItemGroup>
