add app insights config key

--- a/NHS111.Domain.Dos.Api/appsettings.json
+++ b/NHS111.Domain.Dos.Api/appsettings.json
@@ -10,5 +10,8 @@
     "LiveBaseUrl": "https://www.pathwaysdos.nhs.uk/app/api/webservices",
     "UatBaseUrl": "https://uat.pathwaysdos.nhs.uk/app/api/webservices"
   },
-  "dos_endpoint": "uat"
+  "dos_endpoint": "uat",
+  "ApplicationInsights": {
+    "InstrumentationKey": "11111111-2222-3333-4444-555555555555"
+  }
 }
