addes log4net logging for api

--- a/NHS111.Domain.Dos.Api/appsettings.json
+++ b/NHS111.Domain.Dos.Api/appsettings.json
@@ -1,5 +1,8 @@
 {
   "Logging": {
+    "Log4NetConfigFile": {
+      "Name": "wwwroot/log4net.config"
+    },
     "LogLevel": {
       "Default": "Warning"
     }
