reorganises models in to own project

--- a/NHS111.Domain.Dos.Api/NHS111.Domain.Dos.Api.csproj
+++ b/NHS111.Domain.Dos.Api/NHS111.Domain.Dos.Api.csproj
@@ -21,6 +21,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\NHS111.Domain.Dos.Api.Models\NHS111.Domain.Dos.Api.Models.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <WCFMetadata Include="Connected Services" />
   </ItemGroup>
 
