--- a/NHS111.Domain.Dos.Api.Models/NHS111.Domain.Dos.Api.Models.csproj
+++ b/NHS111.Domain.Dos.Api.Models/NHS111.Domain.Dos.Api.Models.csproj
@@ -5,9 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>C:\Users\PHughes\.nuget\packages\newtonsoft.json\9.0.1\lib\netstandard1.0\Newtonsoft.Json.dll</HintPath>
-    </Reference>
+    <PackageReference Include="Newtonsoft.Json" Version="8.0.3" />
   </ItemGroup>
 
 </Project>
