--- a/NHS111.Domain.Dos.Api/NHS111.Domain.Dos.Api.csproj
+++ b/NHS111.Domain.Dos.Api/NHS111.Domain.Dos.Api.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-	<AssemblyVersion>1.0.0.*</AssemblyVersion>
-    <FileVersion>1.0.0.*</FileVersion>
+	<AssemblyVersion>5.0.0.*</AssemblyVersion>
+    <FileVersion>5.0.0.*</FileVersion>
 	<Deterministic>False</Deterministic>
   </PropertyGroup>
 
