ON-1762: Add slash before api on web.config and remove redundant using

--- a/NHS111.Domain.Dos.Api/web.config
+++ b/NHS111.Domain.Dos.Api/web.config
@@ -8,7 +8,7 @@
           <conditions>
             <add input="{HTTP_USER_AGENT}" pattern="^AlwaysOn$"/>
           </conditions>
-          <action type="Rewrite" url="api/monitor/ping"/>
+          <action type="Rewrite" url="/api/monitor/ping"/>
         </rule>
       </rules>
     </rewrite>
