--- a/NHS111.Domain.Dos.Api.Functional.Test/NHS111.Domain.Dos.Api.Functional.Test.csproj
+++ b/NHS111.Domain.Dos.Api.Functional.Test/NHS111.Domain.Dos.Api.Functional.Test.csproj
@@ -7,6 +7,28 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Json\CheckCapacitySummaryResponse.json" />
+    <None Remove="Json\DosCheckCapacitySummaryResponse.json" />
+    <None Remove="Json\DosServiceDetailsByIdResponse.json" />
+    <None Remove="Json\ServiceDetailsByIdResponse.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Json\ServiceDetailsByIdResponse.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Json\DosServiceDetailsByIdResponse.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Json\DosCheckCapacitySummaryResponse.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Json\CheckCapacitySummaryResponse.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
     <PackageReference Include="nunit" Version="3.10.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.10.0" />
