--- a/NHS111.Domain.Dos.Api/NHS111.Domain.Dos.Api.csproj
+++ b/NHS111.Domain.Dos.Api/NHS111.Domain.Dos.Api.csproj
@@ -2,9 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-	<AssemblyVersion>5.2.0.*</AssemblyVersion>
+	<AssemblyVersion>5.3.0.*</AssemblyVersion>
     <FileVersion>5.2.0.*</FileVersion>
 	<Deterministic>False</Deterministic>
+	<Version>5.3.0</Version>
+	<Company>NHS Digital</Company>
   </PropertyGroup>
 
   <ItemGroup>
